name:                windowselect
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/windowselect#readme
license:             BSD3
license-file:        LICENSE
author:              Chayanon Wichitrnithed
maintainer:          example@example.com
copyright:           2017 Chayanon Wichitrnithed
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

Library
  build-depends:       base >= 4.7 && < 5,
                       xmonad,
                       xmonad-contrib
  Exposed-modules:     WindowSelect
